--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,4 +11,9 @@ spring:
     jpa:
         hibernate:
             ddl-auto: create
+eureka:
+    client:
+        enabled: false
+        # serviceUrl:
+        #     defaultZone: http://localhost:8761/eureka/
         
